--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -2930,6 +2930,43 @@ input:checked + .toggleSwitchSlider:before {
     transition-delay: 0s;
 }
 
+/* Update available tooltip styles. */
+#mediaSVGTooltip {
+    visibility: hidden;
+    opacity: 0;
+    width: 130px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    text-align: center;
+    border-radius: 10px;
+    padding: 1px 5px;
+    position: absolute;
+    cursor: default;
+    z-index: 1;
+    top: 100%;
+    font-family: 'Avenir Medium';
+    font-size: 15px;
+    transition: visibility 0s linear 0.25s, opacity 0.25s ease;
+}
+#mediaSVGTooltip::after {
+    content: " ";
+    position: absolute;
+    left: 50%;
+    bottom: 100%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent rgba(0, 0, 0, 0.7) transparent;
+}
+
+.mediaButton:hover ~ #mediaSVGTooltip,
+.mediaButton:focus ~ #mediaSVGTooltip,
+.mediaButton:active ~ #mediaSVGTooltip {
+    visibility: visible;
+    opacity: 1;
+    transition-delay:0.05s;
+}
+
 /* Update available animation. */
 @keyframes glow-grow {
     0% {
@@ -3181,7 +3218,7 @@ input:checked + .toggleSwitchSlider:before {
 
 /* Style for a general label on the bottom of the landing view. */
 .bot_label {
-    font-size: 9px;
+    font-size: 13px;
     letter-spacing: 1px;
     font-weight: bold;
     text-shadow: 0px 0px 0px #bebcbb;
@@ -3203,13 +3240,13 @@ input:checked + .toggleSwitchSlider:before {
 /* Maintains maximum width on the status bar. */
 #server_status_wrapper {
     display: inline-flex;
-    width: 75px;
+    width: 155px;
 }
 
 /* Span which displays the player count of the selected server. */
 #player_count {
     color: #949494;
-    font-size: 8px;
+    font-size: 11px;
     font-weight: 900;
     text-shadow: 0px 0px 20px #949494;
     margin-left: 10px;
